objects/SalesbyProductTerr__c.object
<CustomObject>
    <fields>
        <fullName>Affiliate__c</fullName>
        <formula>Product__r.AffiliateLU__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affiliate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProductType__c</fullName>
        <formula>TEXT(Product__r.ProductType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Sales_by_Products2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase__c</fullName>
        <label>Purchase</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Redemption__c</fullName>
        <label>Redemption</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SalesId__c</fullName>
        <externalId>true</externalId>
        <label>SalesId</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zone</label>
        <referenceTo>Zone__c</referenceTo>
        <relationshipName>Sales_by_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <referenceTo>Territory__c</referenceTo>
        <relationshipLabel>Sales by Products</relationshipLabel>
        <relationshipName>Sales_by_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <description>Sales by Product by Territory, Monthly Data since it started being loaded</description>
    <label>Sales by Product</label>
    <nameField>
        <displayFormat>SPT-{0000000000}</displayFormat>
        <label>Sales by Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales by Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Product__c</columns>
        <columns>ProductType__c</columns>
        <columns>Purchase__c</columns>
        <columns>Redemption__c</columns>
        <columns>SalesId__c</columns>
        <columns>Territory__c</columns>
        <columns>Zone__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>